[project]
name = "contourer"
version = "0.1.9"
description = "Point Cloud Contour Line Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "shapely>=2.0.0",
    "flask>=3.0.0",
]

[project.scripts]
contourer = "contourer.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contourer*"]

[tool.setuptools.package-data]
contourer = ["templates/*.html"]
